Обновил paths для новых тасков.
Добавил 11ty, его конфиг и настройки для gulp & 11ty в appConfig.js.
Добавил минификатор для HTML в конфиге .eleventy.js.

Разделил gulpfile на отдельные таски.

Добавил таск для скейла изображений под ретину и конфиг для скейла в appConfig. + Таск для конвертации в .webp.

Написал часть шорткода для тега <picture> в gulp&11ty/plugins/eleventy-…-picture. #TODO: дописать после получения юзкейсов.

Исключил таски browsersync, html из работы.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,34 @@
 {
+   "settings": {
+      "import/resolver": {
+         "node": {
+            "paths": [
+               "."
+            ]
+         }
+      },
+      "import/extensions": {
+         "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+         ],
+      }
+   },
    "env": {
       "browser": true,
       "commonjs": true,
+      "node": true,
       "es2021": true
    },
    "extends": [
-      "airbnb-base"
+      "airbnb-base",
+      // "plugin:import/errors"
    ],
    "plugins": [
-      "align-assignments"
+      "align-assignments",
+      "import"
    ],
    "parserOptions": {
       "ecmaVersion": 2020
