--- a/package.json
+++ b/package.json
@@ -4,44 +4,51 @@
    "description": "Startup BEM-HTML Template",
    "main": "index.js",
    "scripts": {
-      "start": "gulp",
+      "start": "gulp & npx @11ty/eleventy --watch --serve",
       "cleanImg": "gulp cleanImg",
       "cleanBuild": "gulp cleanBuild",
       "cleanFonts": "gulp cleanFonts",
       "images": "gulp images",
       "styles": "gulp styles",
       "ghDeploy": "gulp ghDeploy",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "log": "gulp log",
+      "log2": "gulp log2"
    },
    "author": "blankov",
    "license": "ISC",
    "devDependencies": {
+      "@11ty/eleventy": "^0.11.1",
       "bootstrap": "^4.5.1",
       "browser-sync": "^2.26.12",
       "del": "^5.1.0",
       "eslint-config-airbnb-base": "^14.2.0",
       "eslint-plugin-align-assignments": "^1.1.2",
-      "eslint-plugin-import": "^2.22.0",
+      "eslint-plugin-import": "^2.22.1",
       "eslint_d": "^9.1.2",
       "gh-pages": "^3.1.0",
       "gulp": "^4.0.2",
       "gulp-autoprefixer": "^7.0.1",
+      "gulp-changed": "^4.0.2",
       "gulp-clean-css": "^4.3.0",
       "gulp-concat": "^2.6.1",
       "gulp-format-html": "^1.2.5",
+      "gulp-htmlmin": "^5.0.1",
       "gulp-imagemin": "^7.1.0",
-      "gulp-newer": "^1.4.0",
       "gulp-nunjucks": "^5.1.0",
       "gulp-rsync": "0.0.9",
       "gulp-sass": "^4.1.0",
       "gulp-uglify-es": "^2.0.0",
       "prettier": "^2.1.1",
+      "pretty": "^2.0.0",
+      "sharp": "^0.27.0",
       "stylelint": "^13.7.1",
       "stylelint-config-airbnb": "^0.0.0",
       "stylelint-config-prettier": "^8.0.2",
       "stylelint-config-rational-order": "^0.1.2",
       "stylelint-order": "^4.1.0",
       "stylelint-prettier": "^1.1.2",
-      "stylelint-scss": "^3.18.0"
+      "stylelint-scss": "^3.18.0",
+      "webp-converter": "^2.3.3"
    }
 }
